--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Covid19 na cidade do Rio de Jaeniro</h1>
+      <h1 class="project-name">Covid19 na cidade do Rio de Janeiro</h1>
       <h2 class="project-tagline">Análise corona virus na cidade do Rio de Janeiro</h2>
       <a href="https://github.com/doricardo/covid19-rio-de-janeiro" class="btn">View on GitHub</a>
       <a href="https://github.com/doricardo/covid19-rio-de-janeiro/zipball/master" class="btn">Download .zip</a>
