--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Covid-19 RIO</h1>
-      <h2 class="project-tagline">Dados e plots sobre as informações do Corona Virus NA cidade do Rio de Janeiro.</h2>
+      <h2 class="project-tagline">Dados e plots sobre as informações do Corona Virus na cidade do Rio de Janeiro.</h2>
       <a href="https://github.com/doricardo/covid19-rio-de-janeiro" class="btn">View on GitHub</a>
     </section>
 
